# This file was incrementally generated/adapted by xAI's Grok 4 
# model over multiple rounds of prompting for reviews and improvements 
# that were suggested by Grok 4, GPT-5 and Gemini 2.5 Pro, and 
# according to the warnings/errors of the GitHub Actions workflow 
# across Linux, macOS, and Windows

[package]
name = "diskspace"
version = "1.0.0"
#authors = []
edition = "2021"

[lib]
name = "diskspace"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
nix = { version = "0.30.1", features = ["fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug"] }
widestring = "1.0"

[features]
default = ["nif_version_2_16"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
